--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
   </head>
-  <body>
+  <body class="max-width gutter">
 
-    <h1 class="tena">Explore the universe</h1>
+    <h1 class="tena push-1-2">Explore the universe</h1>
 
-    <p class="">Blast off into the endless wonder of the ever expanding universe.</p>
+    <p class="giga italic push-2">Blast off into the endless wonder of the ever expanding universe.</p>
 
-    <btn>Launch Now</btn>
+    <div class="btn tera">Launch Now</div>
 
 
   </body>
